@@ -87,6 +87,11 @@ public class BinaryHeap<T extends BinaryHeap.Node> {
 		return (T)removed;
 	}
 
+	/** Returns true if the heap has one or more items. */
+	public boolean notEmpty () {
+		return size > 0;
+	}
+
 	/** Returns true if the heap is empty. */
 	public boolean isEmpty () {
 		return size == 0;
