@@ -365,6 +365,11 @@ public class IdentityMap<K, V> implements Iterable<IdentityMap.Entry<K, V>> {
 			valueTable[index] = null;
 	}
 
+	/** Returns true if the map has one or more items. */
+	public boolean notEmpty () {
+		return size > 0;
+	}
+
 	/** Returns true if the map is empty. */
 	public boolean isEmpty () {
 		return size == 0;
