@@ -411,6 +411,11 @@ public class IntIntMap implements Iterable<IntIntMap.Entry> {
 		}
 	}
 
+	/** Returns true if the map has one or more items. */
+	public boolean notEmpty () {
+		return size > 0;
+	}
+
 	/** Returns true if the map is empty. */
 	public boolean isEmpty () {
 		return size == 0;
@@ -447,8 +452,8 @@ public class IntIntMap implements Iterable<IntIntMap.Entry> {
 		hasZeroValue = false;
 	}
 
-	/** Returns true if the specified value is in the map. Note this traverses the entire map and compares every value, which may be
-	 * an expensive operation. */
+	/** Returns true if the specified value is in the map. Note this traverses the entire map and compares every value, which may
+	 * be an expensive operation. */
 	public boolean containsValue (int value) {
 		if (hasZeroValue && zeroValue == value) return true;
 		int[] keyTable = this.keyTable, valueTable = this.valueTable;
@@ -648,8 +653,8 @@ public class IntIntMap implements Iterable<IntIntMap.Entry> {
 		return values2;
 	}
 
-	/** Returns an iterator for the keys in the map. Remove is supported. Note that the same iterator instance is returned each time
-	 * this method is called. Use the {@link Entries} constructor for nested or multithreaded iteration. */
+	/** Returns an iterator for the keys in the map. Remove is supported. Note that the same iterator instance is returned each
+	 * time this method is called. Use the {@link Entries} constructor for nested or multithreaded iteration. */
 	public Keys keys () {
 		if (keys1 == null) {
 			keys1 = new Keys(this);
