@@ -401,6 +401,11 @@ public class IntMap<V> implements Iterable<IntMap.Entry<V>> {
 			valueTable[index] = null;
 	}
 
+	/** Returns true if the map has one or more items. */
+	public boolean notEmpty () {
+		return size > 0;
+	}
+
 	/** Returns true if the map is empty. */
 	public boolean isEmpty () {
 		return size == 0;
